--- a/about/index.html
+++ b/about/index.html
@@ -36,6 +36,8 @@
         <h1 id="logo-wrap">
           <a href="/" id="logo">吴桐的博客
           
+              <span id="subtitle">Stay Young Stay Simple Always Naive</span>
+          
           </a>
         </h1>
       </div>
